# fugrip

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BLACKWALL_STRUCTURE.md  CLAUDE.md  COVERAGE.md  Cargo.toml  README.md  README_TESTS.md  coverage.lcov  coverage_report.txt  debug_test.rs
.cargo/: config.toml
.config/: nextest.toml
benches/: cache_and_memory_benchmarks.rs  cache_benchmarks.rs  comprehensive_gc_benchmarks.rs  gc_benchmarks.rs  gc_coordination_benchmarks.rs  simd_and_hybrid_benchmarks.rs  synchronization_benchmarks.rs  template_gc_bench.rs
design/: collector_state_decomposition.md
docs/: TEST_HARNESSES.md  VERSE_HEAP_EXPLAINED.md
examples/: handshake_demo.rs  hybrid_sweep_demo.rs  minimal_opaque_demo.rs  opaque_facade_demo.rs  pure_opaque_demo.rs  safepoint_demo.rs  zero_cost_verification.rs
fuzz/: Cargo.toml  debug_artifact.rs
fuzz/fuzz_targets/: black_allocator.rs  cache_optimization.rs  concurrent_stress.rs  object_tracing.rs  parallel_marking.rs  root_scanning.rs  template_fuzz_target.rs  tricolor_marking.rs  write_barrier.rs
harnesses/: Cargo.toml  README.md
harnesses/benches/: comprehensive_gc_bench.rs
harnesses/fuzz_targets/: fuzz_gc.rs
harnesses/src/: lib.rs  main.rs
scripts/: coverage_gate.sh
src/: alloc_facade.rs  allocator.rs  binding.rs  cache_optimization.rs  collector_phase.rs  collector_phases.rs  collector_state.rs  compat.rs  concurrent.rs  core.rs  debug_test.rs  di.rs  error.rs  facade_allocator.rs  finalizable.rs  free_singleton.rs  fugc_coordinator.rs  gc_allocator.rs  handshake.rs  hot_counters.rs  lib.rs  memory.rs  memory_management.rs  modern_allocator.rs  object_class.rs  opaque_handles.rs  plan.rs  pollcheck_macros.rs  roots.rs  safepoint.rs  segmented_heap.rs  simd_sweep.rs  suspend_for_fork.rs  sweeping_phase.rs  test_heap.rs  test_utils.rs  thread.rs  traits.rs  type_info.rs  types.rs  (+3 more)
src/backends/: mod.rs
src/backends/jemalloc/: mod.rs
src/backends/mmtk/: mod.rs  object_model.rs  plan.rs
src/backends/mmtk/binding/: allocation.rs  initialization.rs  mod.rs  mutator.rs  mutator_helpers.rs  stats.rs  tests.rs  vm_impl.rs
src/backends/stub/: mod.rs
src/binding/: allocation.rs  initialization.rs  mutator.rs  mutator_helpers.rs  stats.rs  tests.rs  vm_impl.rs
src/c/: verse_heap.h
src/collector/: finalizer_coordinator.rs  mark_coordinator.rs  mod.rs  phase_manager.rs  suspension_manager.rs  sweep_coordinator.rs
src/concurrent/: allocation.rs  barriers.rs  classification.rs  coordination.rs  core.rs  marking.rs  mod.rs  tests.rs  tricolor.rs
src/frontend/: alloc_facade.rs  allocator.rs  mod.rs  types.rs
src/fugc_coordinator/: api.rs  core.rs  helpers.rs  mod.rs  protocol.rs  tests.rs  types.rs
src/interfaces/: memory.rs  mocks.rs  mod.rs  test_utils.rs  threading.rs
src/memory_management/: finalizers.rs  free_objects.rs  manager.rs  mod.rs  tests.rs  weak_maps.rs  weak_refs.rs
src/safepoint/: events.rs  globals.rs  manager.rs  mod.rs  phases.rs  state.rs  tests.rs
tests/: advancing_wavefront_tests.rs  allocator.rs  allocator_interface.rs  benchmark_validation_test.rs  binding.rs  binding_error_conditions.rs  cache_locality_tests.rs  cache_optimization_error_paths.rs  cache_optimization_failure_modes.rs  cache_performance_tests.rs  collector_phase_tests.rs  collector_phases_comprehensive_tests.rs  collector_phases_comprehensive_tests.rs.disabled  collector_phases_coverage_tests.rs  collector_phases_expanded_tests.rs  collector_phases_simple_tests.rs  concurrent_atomic_edge_cases.rs  concurrent_marking_basic.rs  concurrent_marking_integration.rs  concurrent_state_sharing_test.rs  coordinator_hybrid_sweep_test.rs  core.rs  cross_platform_tests.rs  error_handling.rs  fugc_8_step_protocol.rs  fugc_basic_demonstration.rs  fugc_conformance_smoke_tests.rs  fugc_coordinator_edge_cases.rs  fuzz_artifact_debug.rs  gc_fuzz_tests.proptest-regressions  gc_fuzz_tests.rs  gc_invariant_tests.proptest-regressions  gc_invariant_tests.rs  gc_ref_wrappers_tests.rs  gc_stress_tests.rs  integration_tests.rs  interfaces_tests.rs  macro_pollcheck_demo.rs  memory_coverage_tests.rs  memory_coverage_tests_comprehensive.rs  (+27 more)
tests/stress/: template_gc_stress.rs
