[package]
name = "fugrip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = ">=1.0.99", features = ["backtrace"] }
crossbeam = { version = ">=0.8.4", features = ["crossbeam-epoch"] }
crossbeam-epoch = ">=0.9"
crossbeam-queue = ">=0.3"
crossbeam-deque = ">=0.8"
crossbeam-utils = ">=0.8"

thiserror = ">=2.0.16"
tracing = { version = ">=0.1.41", features = ["log"] }
libc = ">=0.2"
parking_lot = ">=0.12"
once_cell = ">=1.20"
memoffset = ">=0.9"
thread_local = ">=1.1"
num_cpus = ">=1.16"
bitflags = ">=2.6"
rayon = ">=1.10"
psm = ">=0.1"
stacker = ">=0.1"
mmtk = { version = ">=0.31", default-features = false }
lazy_static = ">=1.5.0"
dashmap = ">=6.1"
itertools = ">=0.13"
flume = "0.11.1"
arc-swap = "1.7.1"

# Consolidated benchmark suite covering all FUGC performance aspects
[[bench]]
name = "comprehensive_gc_benchmarks"
harness = false


[dev-dependencies]
criterion = ">=0.7.0"
mmtk = ">=0.31"
fastrand = ">=2.0"
proptest = ">=1.0"
quickcheck = ">=1.0"
arbitrary = ">=1.0"

[features]
# Enable lightweight smoke tests that validate high-level GC semantics
smoke = []
segment_scan_linux = []
# Enable cache profiling and hardware performance counter integration
cache_profiling = []
# Gate expensive stress suites so they only run when explicitly requested
stress-tests = []
# Gate nondeterministic performance tests that can fail due to system load
performance-tests = []

# Coverage configuration
[profile.coverage]
inherits = "dev"
debug = true
opt-level = 0
debug-assertions = true
overflow-checks = true
