[package]
name = "fugrip-harnesses"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
crossbeam-queue = "0.3"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.7"
libfuzzer-sys = "0.4"

[package.metadata]
description = "Independent harness runner for stress/bench workloads (standalone)."
